--- a/Converter React-Node/React_Currency_ConverterDR/package.json
+++ b/Converter React-Node/React_Currency_ConverterDR/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gestor-opiniones-react",
+  "name": "react-currency-converterdr",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,12 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.0",
-    "react-spinners": "^0.13.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
